--- a/classtest/src/main/res/layout/activity_main2.xml
+++ b/classtest/src/main/res/layout/activity_main2.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<xyz.zhuiyun.cloud.classtest.GiftView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/gifView"
     android:layout_height="match_parent"
     tools:context="xyz.zhuiyun.cloud.classtest.Main2Activity">
-    <TextView
+    <Button
         android:id="@+id/tv11"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:text="add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:text="delete"
+        android:layout_height="wrap_content" />
+</xyz.zhuiyun.cloud.classtest.GiftView>
